--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -27,6 +27,9 @@
                 <div>
                     <a href="/articles">Article</a>
                 </div>
+                <div>
+                    <a href="/articles/add_wysiwyg">Add Article(WYSIWYG)</a>
+                </div>
             </div>
         </div>
     </div>
