--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -27,6 +27,9 @@
                 <div>
                     <a href="/articles">Article</a>
                 </div>
+                <div>
+                    <a href="/links">Links stuff</a>
+                </div>
             </div>
         </div>
     </div>
