--- a/site/views/imageset/index.html
+++ b/site/views/imageset/index.html
@@ -14,6 +14,9 @@
                 <div>
                     <a href="/imagesets/list/react">Imageset List (React)</a>
                 </div>
+                <div>
+                    <a href="/imagesets/googlemap">Google map API test</a>
+                </div>
             </div>
         </div>
     </div>
