--- a/site/views/page/add.html
+++ b/site/views/page/add.html
@@ -73,7 +73,7 @@ var app = {
             <div class="form-group row">
                 <label for="pageName" class="col-sm-4 control-label">Name</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" id="pageName" placeholder="">
+                    <input type="text" class="form-control" id="pageName" value="{{ page.name }}">
                 </div>
             </div>
         </div>
