--- a/site/views/module/edit.html
+++ b/site/views/module/edit.html
@@ -33,5 +33,14 @@ window.app = {
         </div>
     </div>
     
+    <div class="row">
+        <div class="col-md-8" id="form1">
+        </div>
+        <div class="col-md-8" id="form2">
+        </div>
+        <div class="col-md-8" id="form3">
+        </div>
+    </div>
+    
 </div>
 {% endblock %}
