--- a/site/views/module/edit.html
+++ b/site/views/module/edit.html
@@ -23,13 +23,15 @@ window.app = {
 <div class="container" style="margin-top:20px;">
     
     <div class="row">
-        <div class="col-md-10">
-            <h4>Edit {{ page.moduleName }} id:{{ page.itemId }}</h4>
+        <div class="col-md-12">
+            <h4>Edit {{ page.moduleName }}</h4>
+            <div class="hidden">id: {{ page.itemId }}</div>
         </div>
     </div>
     
-    <div class="row">
+    <div class="row" style="margin-top:20px;">
         <div class="col-md-6">
+            <div id="editForm"></div>
         </div>
     </div>
     
